--- a/index.html
+++ b/index.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Limitless Consulting</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/src/styles.css" />
+  </head>
+  <body>
+    <nav class="nav-bar" id="nav-bar">
+      <div id="logo-container">
+        <img id="logo" src="#" alt="logo png" />
+      </div>
+      <div id="nav-tabs">
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="partners.html">Partners</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Limitless Consulting</h1>
+          <p>Our mission is to help you achieve your goals</p>
+        </div>
+      </div>
+      <div id="services">
+        <h2>Services</h2>
+        <div class="service">
+          <div class="service-icon">
+            <img src="#" alt="service icon" />
+          </div>
+          <div class="service-text">
+            <h3>Service 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quae.
+            </p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-icon">
+            <img src="#" alt="service icon" />
+          </div>
+          <div class="service-text">
+            <h3>Service 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quae.
+            </p>
+          </div>
+        </div>
+        <div id="service-section" class="service">
+          <div class="service-icon">
+            <img src="#" alt="service icon" />
+          </div>
+          <div class="service-text">
+            <h3>Service 3</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quae.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="section" id="save-section">
+        <div class="section-text">
+          <h2>Save Time</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quae.
+          </p>
+        </div>
+        <div class="section-image">
+          <img src="#" alt="save time image" />
+        </div>
+      </div>
+    </div>
+    <footer class="footer" id="footer">
+        <div class="footer-text">
+            <h2>Get in touch</h2>
+            <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quae.
+            </p>
+        </div>
+    </footer>
+  </body>
 </html>
