--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="container">
       <div class="hero">
         <div class="hero-text">
-          <h1>Limitless Consulting</h1>
-          <p>Our mission is to help you achieve your goals</p>
+          <h1>Limitless Technology Solutions</h1>
+          <p>One Source For Telecom & Technologies</p>
         </div>
       </div>
       <div id="services">
