--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Limitless Consulting</title>
     <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="nav-bar" id="nav-bar">
       <div id="logo-container">
-        <img id="logo" src="#" alt="logo png" />
+        <a id="logo-link" href="index.html">
+          <img id="logo"
+          src="src="https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg"
+          alt="jpg_edited.jpg" style="width: 152px; height: 55px; object-fit:
+          contain; object-position: center center;"
+          srcset="https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg
+          1x,
+          https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_304,h_110,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg
+          2x" fetchpriority="high"/>
+        </a>
       </div>
       <div id="nav-tabs">
         <ul>
@@ -32,70 +47,71 @@
     <div class="container">
       <div class="hero">
         <div class="hero-text">
-          <h1>Limitless Technology Solutions</h1>
+          <span id="hero-text">
+            <h1>Limitless</h1>
+            <h1>Technology</h1>
+            <h1>Solutions</h1>
+          </span>
           <p>One Source For Telecom & Technologies</p>
         </div>
       </div>
-      <div id="services">
-        <h2>Services</h2>
-        <div class="service">
-          <div class="service-icon">
-            <img src="#" alt="service icon" />
+      <div class="container">
+        <div class="service" id="service">
+          <div class="service-image">
+            <img src="/assets/images/client-intake.webp" alt="service image" />
           </div>
           <div class="service-text">
-            <h3>Service 1</h3>
+            <h2>WHAT WE PROVIDE CLIENTS WITH</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quae.
-            </p>
-          </div>
-        </div>
-        <div class="service">
-          <div class="service-icon">
-            <img src="#" alt="service icon" />
-          </div>
-          <div class="service-text">
-            <h3>Service 2</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quae.
-            </p>
-          </div>
-        </div>
-        <div id="service-section" class="service">
-          <div class="service-icon">
-            <img src="#" alt="service icon" />
-          </div>
-          <div class="service-text">
-            <h3>Service 3</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quae.
+              Limitless Technology Solutions offers the comprehensive
+              capabilities and deep industry knowledge necessary to help you
+              solve the most complex issues of your organization. Based in
+              Pittsburgh, PA, our team has over 20 years experience directly
+              selling Telecom, cloud, and wireless services. With our knowledge,
+              expertise, and extensive portfolio of vendors, our clients are
+              able to keep managing their priorities while we take care of
+              finding the right solutions that fit their needs and their
+              budgets. We strive to provide all of our clients with superb
+              customer service. Our goal is to set realistic expectations, not
+              just to meet them, but exceed them in unexpected and helpful ways.
             </p>
           </div>
         </div>
       </div>
-      <div class="section" id="save-section">
-        <div class="section-text">
-          <h2>Save Time</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-            quae.
-          </p>
-        </div>
-        <div class="section-image">
-          <img src="#" alt="save time image" />
+      <div class="save-container">
+        <div class="save-section" id="save-section">
+          <div class="save-section-text">
+            <h2>HOW WE SAVE</h2>
+            <p>
+              We help businesses reduce Cost & Increase Productivity! Whether
+              your business is large, small, or anywhere in between, we show you
+              the value that Limitless Business brings to the table with the
+              communications services you have in place, and those you intend to
+              purchase. Where you have Landline, Mobile, Cloud or Software
+              services, we can connect to, validate, and manage your services
+              through automation.
+            </p>
+          </div>
+          <div class="save-section-image">
+            <img src="/assets/images/client2.webp" alt="save time image" />
+          </div>
         </div>
       </div>
     </div>
     <footer class="footer" id="footer">
-        <div class="footer-text">
-            <h2>Get in touch</h2>
-            <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-            quae.
-            </p>
-        </div>
+      <div class="footer-text">
+        <h2>LIMITLESS TECHNOLOGY SOLUTIONS</h2>
+        <p>412-530-5511</p>
+        <p>
+          ©2023 BY LIMITLESS BUSINESS CONSULTING. Built by
+          <a
+            id="creator-link"
+            href="https://www.linkedin.com/in/christian-rangel-9406a0189/"
+            >Rangel Pages</a
+          >
+        </p>
+        
+      </div>
     </footer>
   </body>
 </html>
