add: contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,6 +14,55 @@
 </head>
 
 <body>
+    <nav class="nav-bar" id="nav-bar">
+        <div id="logo-container">
+            <a id="logo-link" href="index.html">
+                <img id="logo" src="src="
+                    https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg"
+                    alt="jpg_edited.jpg" style="width: 152px; height: 55px; object-fit:
+              contain; object-position: center center;" srcset="https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg
+              1x,
+              https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_304,h_110,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg
+              2x" fetchpriority="high" />
+            </a>
+        </div>
+        <div id="nav-tabs">
+            <ul>
+                <li>
+                    <a href="home.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="partners.html">Partners</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div id="contact-container">
+        <div id="contact-img">
+            <img src="/assets/images/background.png" alt="background.png">
+        </div>
+        <div id="contact-form">
+            <h1>Contact Us</h1>
+            <form action="https://formspree.io/f/xnqppqjw" method="POST">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" placeholder="Enter your name" required>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="Enter your email" required>
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter your message"
+                    required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        
+    </div>
+
 
 </body>
 
