--- a/pages/home.html
+++ b/pages/home.html
@@ -28,16 +28,16 @@
     <div id="nav-tabs">
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
         </li>
         <li>
-          <a href="/pages/about.html">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="partners.html">Partners</a>
         </li>
         <li>
-          <a href="/pages/contact.html">Contact</a>
+          <a href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
