--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="nav-bar" id="nav-bar">
         <div id="logo-container">
-            <a id="logo-link" href="index.html">
+            <a id="logo-link" href="home.html">
                 <img id="logo" src="src="
                     https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg"
                     alt="jpg_edited.jpg" style="width: 152px; height: 55px; object-fit:
