--- a/pages/about.html
+++ b/pages/about.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Limitless Consulting</title>
-    <link rel="stylesheet" href="/src/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home | Limitless Consulting</title>
+  <link rel="stylesheet" href="/src/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet" />
+</head>
+
 <body>
-    <nav class="nav-bar" id="nav-bar">
-        <div id="logo-container">
-          <a id="logo-link" href="home.html">
-            <img id="logo" src="src="
-              https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg"
-              alt="jpg_edited.jpg" style="width: 152px; height: 55px; object-fit:
+  <nav class="nav-bar" id="nav-bar">
+    <div id="logo-container">
+      <a id="logo-link" href="home.html">
+        <img id="logo" src="src="
+          https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg"
+          alt="jpg_edited.jpg" style="width: 152px; height: 55px; object-fit:
               contain; object-position: center center;" srcset="https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_152,h_55,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg
               1x,
               https://static.wixstatic.com/media/68427a_17d55bbfb9214a968d62da9d0568f678~mv2.jpg/v1/fill/w_304,h_110,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/jpg_edited.jpg
               2x" fetchpriority="high" />
-          </a>
-        </div>
-        <div id="nav-tabs">
-          <ul>
-            <li>
-              <a href="/pages/home.html">Home</a>
-            </li>
-            <li>
-              <a href="/pages/about.html">About</a>
-            </li>
-            <li>
-              <a href="partners.html">Partners</a>
-            </li>
-            <li>
-              <a href="/pages/contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="about-hero-container">
-        <div class="about-hero">
-          <h1>About Us</h1>
-          <p>
-            We are a team of professionals that are passionate about helping
-            businesses grow and succeed.
-          </p>
-        </div>
+      </a>
+    </div>
+    <div id="nav-tabs">
+      <ul>
+        <li>
+          <a href="/pages/home.html">Home</a>
+        </li>
+        <li>
+          <a href="/pages/about.html">About</a>
+        </li>
+        <li>
+          <a href="partners.html">Partners</a>
+        </li>
+        <li>
+          <a href="/pages/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="about-hero-container">
+    <div class="about-hero">
+      <h1>About Us</h1>
+      <p>
+        We are a team of professionals that are passionate about helping
+        businesses grow and succeed.
+      </p>
+    </div>
+  </div>
+  <div class="bottom-border" id="second-p">
+    <h2>Limitless Technology Solutions is a Premier Technology Advisor that offers a wide range of Telecom and
+      Technology services for all industries. We’ve got the necessary tools and expertise to help you grow your
+      business, and learn how to properly manage your expansion, or your next project. We partner with our clients to
+      develop engaging business strategies, design high quality and scalable solutions, and build rich brand
+      experiences. If your business is seeking ways to become more efficient, maximize your time, and provide better
+      service to your customers, Limitless Technology Solutions is here to help!</h2>
+  </div>
+  <div class="bottom-border" id="third-p">
+    <h2>OUR SIX-STEPS FOR YOUR SUCCESS</h2>
+    <h3>Proven Results</h3>
+  </div>
 
 
 
 
-      <footer class="footer" id="footer">
-        <div class="footer-text">
-          <h2>LIMITLESS TECHNOLOGY SOLUTIONS</h2>
-          <p>412-530-5511</p>
-          <p>
-            ©2023 BY LIMITLESS BUSINESS CONSULTING. Built by
-            <a id="creator-link" href="https://www.linkedin.com/in/christian-rangel-9406a0189/">Rangel Pages</a>
-          </p>
-        </div>
-      </footer>
-    
+
+  <footer class="footer" id="footer">
+    <div class="footer-text">
+      <h2>LIMITLESS TECHNOLOGY SOLUTIONS</h2>
+      <p>412-530-5511</p>
+      <p>
+        ©2023 BY LIMITLESS BUSINESS CONSULTING. Built by
+        <a id="creator-link" href="https://www.linkedin.com/in/christian-rangel-9406a0189/">Rangel Pages</a>
+      </p>
+    </div>
+  </footer>
+
 </body>
+
 </html>
