about us page outline

--- a/pages/about.html
+++ b/pages/about.html
@@ -63,6 +63,59 @@
     <h2>OUR SIX-STEPS FOR YOUR SUCCESS</h2>
     <h3>Proven Results</h3>
   </div>
+  <div class="bottom-border" id="fourth-p">
+    <div class="grid">
+      <p class="grid-item"></p>
+      <p class="grid-item"></p>
+      <p class="grid-item"></p>
+      <p class="grid-item"></p>
+      <p class="grid-item"></p>
+      <p class="grid-item"></p>
+    </div>
+  </div>
+  <section class="bottom-border" id="why-us">
+    <div id="cards">
+      <div class="bottom-border">
+        <h2>
+          TECHNOLOGY ONE STOP SHOP</h2>
+        <p>With Limitless Technology Solutions and our network of technology advisors, you get a one-stop shop for
+          business technology. We offer leading cloud applications with outstanding support, the best connectivity,
+          voice, and energy/IoT solutions, plus unbiased advice to help you quickly find and implement the best
+          technology for your business.
+        </p>
+      </div>
+      <div class="bottom-border">
+        <h2>CARRIER AGNOSTIC</h2>
+        <p>Whether your just getting started with your business or you are working to grow and expand your customer
+          base, we offer our unbiased expertise to find the right solution at the right price. No matter where you are
+          in your business journey, our trusted and impartial technology advisors are here to help you get everything
+          you need to power your future.</p>
+
+      </div>
+
+      <div class="bottom-border">
+        <h2>TRUE PARTNERSHIP</h2>
+        <p>Businesses and organizations of all sizes across all sectors trust Limitless Technology Solutions with their
+          technology decisions. These include Large Enterprises and SMB companies within the retail, healthcare,
+          hospitality, manufacturing, banking, television and movie production, as well as non-profits, universities,
+          and more.</p>
+
+      </div>
+      <div class="bottom-border">
+        <h2>COST SAVINGS</h2>
+        <p>Any customer, large or small and anywhere in between will see value in the level of detail Limitless
+          Technology dives into with the communications services you have in place, and those you intend to purchase.
+          Our Enterprise Technology Management (ETM) platform provides IT, procurement, and finance departments with the
+          ability to connect, optimize, and manage large-scale corporate communications costs and visualize associated
+          inventories.</p>
+      </div>
+    </div>
+  </section>
+  <div class="bottom-border" id="contact-btn">
+    <a href="/pages/contact.html">Contact Us</a>
+
+  </div>
+
 
 
 
