ADD: youtube embed

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,12 +45,27 @@
   <div class="about-hero-container">
     <div class="about-hero">
       <h1>About Us</h1>
+      <div class="lines">
+        <!-- lines under the title -->
+        <line></line>
+        <line></line>
+        <line></line>
+      </div>
+
       <p>
         We are a team of professionals that are passionate about helping
         businesses grow and succeed.
       </p>
     </div>
   </div>
+  <div class="video">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/mx4OOBq5228" title="Limitless Technology   ETM"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
+
+  </div>
+
   <div class="bottom-border" id="second-p">
     <h2>Limitless Technology Solutions is a Premier Technology Advisor that offers a wide range of Telecom and
       Technology services for all industries. We’ve got the necessary tools and expertise to help you grow your
@@ -65,12 +80,38 @@
   </div>
   <div class="bottom-border" id="fourth-p">
     <div class="grid">
-      <p class="grid-item"></p>
-      <p class="grid-item"></p>
-      <p class="grid-item"></p>
-      <p class="grid-item"></p>
-      <p class="grid-item"></p>
-      <p class="grid-item"></p>
+      <div class="grid-item">
+        <h1>INTRODUCTORY DISCOVERY</h1>
+        <p>Understanding your company, team, challenges, and goals allows us to recommend the most efficient Voice,
+          Data, and Cloud solutions for your business.</p>
+      </div>
+      <div class="grid-item">
+        <h1>STRATEGIC RESEARCH</h1>
+        <p>Our team of experts evaluates your existing solutions to identify improvements and opportunities for the
+          future, with no upfront cost or obligation.</p>
+      </div>
+      <div class="grid-item">
+        <h1>COMPLEX SOURCING</h1>
+        <p>We prepare a detailed breakdown featuring a curated list of solution providers who will help you conquer
+          challenges and achieve your goals today and in the future.
+
+        </p>
+      </div>
+      <div class="grid-item">
+        <h1>PROVIDER SELECTION</h1>
+        <p>Understanding your company, team, challenges, and goals allows us to recommend the most efficient Voice,
+          Data, and Cloud solutions for your business.</p>
+      </div>
+      <div class="grid-item">
+        <h1>CONTRACT NEGOTIATIONS</h1>
+        <p>We understand how the Industry works and we use it for your advantage. We'll negotiate the most favorable
+          contract terms available with any supplier on your behalf.</p>
+      </div>
+      <div class="grid-item">
+        <h1>IMPLEMENTATION & INSTALLATION</h1>
+        <p>We know details can fall through the cracks, so we work diligently to make sure your order is implemented
+          correctly and on time, and are always available for updates, moves, or changes as your business evolves.</p>
+      </div>
     </div>
   </div>
   <section class="bottom-border" id="why-us">
@@ -112,6 +153,7 @@
     </div>
   </section>
   <div class="bottom-border" id="contact-btn">
+    <h2>Contact us and find how our services can benefit your company.</h2>
     <a href="/pages/contact.html">Contact Us</a>
 
   </div>
