ADD: about page css

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,13 +45,6 @@
   <div class="about-hero-container">
     <div class="about-hero">
       <h1>About Us</h1>
-      <div class="lines">
-        <!-- lines under the title -->
-        <line></line>
-        <line></line>
-        <line></line>
-      </div>
-
       <p>
         We are a team of professionals that are passionate about helping
         businesses grow and succeed.
@@ -66,7 +59,7 @@
 
   </div>
 
-  <div class="bottom-border" id="second-p">
+  <div id="second-p">
     <h2>Limitless Technology Solutions is a Premier Technology Advisor that offers a wide range of Telecom and
       Technology services for all industries. We’ve got the necessary tools and expertise to help you grow your
       business, and learn how to properly manage your expansion, or your next project. We partner with our clients to
@@ -74,11 +67,11 @@
       experiences. If your business is seeking ways to become more efficient, maximize your time, and provide better
       service to your customers, Limitless Technology Solutions is here to help!</h2>
   </div>
-  <div class="bottom-border" id="third-p">
+  <div id="third-p">
     <h2>OUR SIX-STEPS FOR YOUR SUCCESS</h2>
     <h3>Proven Results</h3>
   </div>
-  <div class="bottom-border" id="fourth-p">
+  <di id="fourth-p">
     <div class="grid">
       <div class="grid-item">
         <h1>INTRODUCTORY DISCOVERY</h1>
@@ -113,10 +106,10 @@
           correctly and on time, and are always available for updates, moves, or changes as your business evolves.</p>
       </div>
     </div>
-  </div>
-  <section class="bottom-border" id="why-us">
+  </di>
+  <section class="about-cards" id="why-us">
     <div id="cards">
-      <div class="bottom-border">
+      <div class="a-card">
         <h2>
           TECHNOLOGY ONE STOP SHOP</h2>
         <p>With Limitless Technology Solutions and our network of technology advisors, you get a one-stop shop for
@@ -125,7 +118,7 @@
           technology for your business.
         </p>
       </div>
-      <div class="bottom-border">
+      <div class="a-card">
         <h2>CARRIER AGNOSTIC</h2>
         <p>Whether your just getting started with your business or you are working to grow and expand your customer
           base, we offer our unbiased expertise to find the right solution at the right price. No matter where you are
@@ -134,7 +127,7 @@
 
       </div>
 
-      <div class="bottom-border">
+      <div class="a-card">
         <h2>TRUE PARTNERSHIP</h2>
         <p>Businesses and organizations of all sizes across all sectors trust Limitless Technology Solutions with their
           technology decisions. These include Large Enterprises and SMB companies within the retail, healthcare,
@@ -142,7 +135,7 @@
           and more.</p>
 
       </div>
-      <div class="bottom-border">
+      <div class="a-card">
         <h2>COST SAVINGS</h2>
         <p>Any customer, large or small and anywhere in between will see value in the level of detail Limitless
           Technology dives into with the communications services you have in place, and those you intend to purchase.
@@ -152,11 +145,13 @@
       </div>
     </div>
   </section>
-  <div class="bottom-border" id="contact-btn">
-    <h2>Contact us and find how our services can benefit your company.</h2>
-    <a href="/pages/contact.html">Contact Us</a>
-
+  <div id="about-contact-container">
+    <div id="contact-btn">
+      <h2>Contact us and find how our services can benefit your company.</h2>
+      <a href="/pages/contact.html">Contact Us</a>
+    </div>
   </div>
+
 
 
 
