--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | Limitless Consulting</title>
-  <link rel="stylesheet" href="/src/styles.css" />
+  <!-- <link rel="stylesheet" href="/src/styles.css" /> -->
+  <link rel="stylesheet" href="/src/about-styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet" />
