--- a/pages/partners.html
+++ b/pages/partners.html
@@ -43,6 +43,36 @@
       </ul>
     </div>
   </nav>
-  <div id="apologies">
-    <h1>Sorry, this page is still under construction!</h1>
+  <div id="partner-hero">
+    <div id="partner-hero-text">
+      <h1>SOLUTIONS THAT FIT YOUR NEEDS AND YOUR BUDGET</h1>
+    </div>
   </div>
+  <div id="our-goals-card">
+    <div id="our-goals-card-text">
+      <h2>Achieve Your Goals</h2>
+      <h1>Our Partners</h1>
+      <p>
+        At Limitless Technology Solutions, we partner with hundreds of vendors to provide a vast range products and
+        solutions within Telecommunications, Cloud Computing, Wireless Services, and Advertising to help move your
+        business to the next level. At Limitless Business Consulting, we combine our insights on how to transform your
+        projects, processes, strategies, and in turn your company. And our staff has the capabilities and experience to
+        actually do it. We’re proud to help shape how leading companies structure and manage their business.
+      </p>
+    </div>
+  </div>
+  <div id="our-services">
+    <h1>OUR SERVICES AND OFFERINGS</h1>
+    <div id="our-services-cards">
+      <div class="our-services-card">
+        <h1>WEB DESIGN, DEVELOPMENT, & HOSTING</h1>
+      </div>
+      <div class="our-services-card">
+        <h1>INTERNET, VOICE, & ETHERNET</h1>
+      </div>
+      <div class="our-services-card">
+        <h1>CLOUD, COLOCATION, & DATA STORAGE</h1>
+      </div>
+    </div>
+  </div>
+
