partners page done

--- a/pages/partners.html
+++ b/pages/partners.html
@@ -75,4 +75,33 @@
       </div>
     </div>
   </div>
-
+  <div id="our-services-2">
+    <div id="our-services-cards-2">
+      <div class="our-services-card">
+        <h1>ADVERTISING & SOCIAL MEDIA MARKETING</h1>
+      </div>
+      <div class="our-services-card">
+        <h1>WIRELESS, IOT/M2M, & MANAGEMENT</h1>
+      </div>
+      <div class="our-services-card">
+        <h1>EQUIPMENT, HARDWARE, & SOFTWARE</h1>
+      </div>
+    </div>
+  </div>
+  <div id="partner-list-img">
+    <img src="/assets/images/partner-list.webp">
+    <button id="partner-list-btn">
+      <a href="/pages/partners_list.html">View Full List of Partners</a>
+    </button>
+  </div>
+  <footer class="footer" id="footer">
+    <div class="footer-text">
+      <h2>LIMITLESS TECHNOLOGY SOLUTIONS</h2>
+      <p>412-530-5511</p>
+      <p>
+        ©2023 BY LIMITLESS BUSINESS CONSULTING. Built by
+        <a id="creator-link" href="https://www.linkedin.com/in/christian-rangel-9406a0189/">Rangel Pages</a>
+      </p>
+    </div>
+  </footer>
+</body>
