--- a/pages/partners.html
+++ b/pages/partners.html
@@ -89,7 +89,7 @@
     </div>
   </div>
   <div id="partner-list-img">
-    <img src="/assets/images/partner-list.webp">
+    <img src="/assets/images/partner-list.jpg">
     <button id="partner-list-btn">
       <a href="/pages/partners_list.html">View Full List of Partners</a>
     </button>
